20170515: 3.6.2
	* ezgui.c: Fixed the bug that failed to restore the default value
	of the Grid Setting as well as the text control detection.
	Three issues were related to this bug:
	1. text control didn't hook up the event process
	2. the profile was disabled but failed to enable again
	3. the font_gtk_name field dereferenced to the volatile contents 
	of IupGetAttribute().

20170514:
	* ezgui.c: Fixed the bug that the label control has a different
	background colour than the dialog background.
	The bug was caused by the tab control which came from the Windows
	theme.

20170513:
	* ffmpeg_3_x: Merged the 'deprecated build' from the ffmpeg_3_x branch
	because this build can barely work on ffmpeg 3.3.

20170512:
	* ezgui.c: Fixed the bug that the zoom option layout is inconsistent in 
	different distros. In GTK2 the text control applied the vertical
	alignment of the "+/-" button. In GTK3 on the other hand, the "+/-"
	button turned to be horizontal, which means the text control need a
	larger size attribution.
	* id_lookup.c: Normalized the information label in the head margin of
	the screenshot canvas.

20170511:
	* libcsoup: updated to 0.9.7 to remove the -Wshift-negative-value warning.
	* ezgui.c: Fixed the bug which deleting all entries in GTK3.
	In GTK3 once an entry was removed, the focus automatically moved to
	the next entry, unlike GTK2, which caused the constantly deleting.
	* ezgui.c: Fixed the bug which generating screenshot with wrong
	attribution if some videoes were removed from the list control.
	Root Cause: The REMOVEITEM only affective after the list control has
	been mapped. Therefore the virtual list can not remove its contents,
	which caused the filename list couldn't match with the attribution
	list.
	* ezgui.c: Fixed the bug which failed to recover the 'auto' zooming if
	other zooms were chosen once.

20170510:
	* configure.ac: added tests for	HAVE_AVFRAME_PKT_PTS, HAVE_AVFRAME_BEST_ETS,
	HAVE_GD_USE_FONTCONFIG and HAVE_GD_IMAGE_GIFANIMATION