@@ -1,6 +1,44 @@
-ezthumb
+# Object files
 *.o
+*.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+
+# In this Project
+ezthumb
 *.avi
 *.wmv
 *.jpg
+*.gif
+config.log
+config.status
+stamp-h1
 external/libcsoup/main/main_define.h
